# DuoRead-FE-BE

./: LICENSE  README.md
BackEnd/: .env.example  API_Documentation.md  README.md  TEST_README.md  __init__.py  debug_test.py  final_test.py  main.py  pyproject.toml  test_api.py  test_auto.py  test_chat_streaming.py  test_pytest.py  upload_demo_books.py
FrontEnd/: .env.example  Docs.md  README.md  api-docs.md  index.html  mynotes.txt  package-lock.json  package.json  problem_statement.txt  product_description.txt  tailwind.config.ts
FrontEnd/ChromeAIDocs/: built_in_apis_docs.txt  summarizer_api_docs.txt  translator_api_docs.txt  writer_api_docs.txt
FrontEnd/src/: App.tsx  index.css  main.tsx
FrontEnd/src/components/: BookLibrary.tsx  ChatSidebar.tsx  FloatingToolbar.tsx  LanguageSelector.tsx  OnboardingTour.tsx  PDFViewer.tsx  SaveStickyNoteModal.tsx  StickyNoteViewModal.tsx  StickyNotesSidebar.tsx  ThemeToggle.tsx
FrontEnd/src/components/ui/: sonner.tsx
FrontEnd/src/contexts/: AuthContext.tsx  ThemeContext.tsx
FrontEnd/src/hooks/: useStreamingAI.ts  useTokenRefresh.ts
FrontEnd/src/lib/: languageMapping.ts  stickyNotesApi.ts
FrontEnd/src/pages/: AppPage.tsx  Auth.tsx  Landing.tsx  Profile.tsx
FrontEnd/src/styles/: streaming.css
FrontEnd/src/types/: stickyNote.ts
