[project]
name = "duoread"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.119.0",
    "huggingface-hub>=0.35.3",
    "langchain-community>=0.3.30",
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "langgraph>=1.0.0",
    "langgraph-checkpoint-mongodb>=0.2.1",
    "psycopg2-binary>=2.9.11",
    "pydantic[email]>=2.12.3",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.1",
    "sqlmodel>=0.0.27",
    "uvicorn[standard]>=0.38.0",
    "langchain-huggingface>=1.0.0",
    "pgvector>=0.3.0",
    "python-multipart>=0.0.20",
    "langdetect>=1.0.9",
    "pypdf>=6.1.1",
    "langchain-google-genai>=3.0.0",
]
